- Changed: Reorganized main menu
- Implemented: Devices Overview, added device Idx
- Changed: generic little endian detection algorithm
- Implemented: 1-Wire startup delay
- Implemented: Application Settings, Notification Interval for Sensors/Switches
- Implemented: support for 1-Wire with hubs
- Implemented: 1-Wire Humidity sensors

Version 1.0.607 (May 11th 2013)
- Changed: Rego6XX Type setting moved to the hardware settings in the same way as RFXtrx setup is done
- Removed: patch for 'Better day value calculation' for multimeter devices (Like P1 Smart Meter electra), not needed
- Fixed: TE923 (Weather stations) hardware can now be shared
- Fixed: Push On delayed Off was deleted from queue, and was being send
- Implemented: Latest RFXCOM SDK (#66)
- Implemented: when a light/switch is pressed an optional script can be started (see scripts/readme.txt)
- Fixed: background scripts now outside of mutex (could cause a lock)
- Changed: Normal script calls should now use the 'params' option for parameters
- Fixed: Scene 'Learn' code option can now be used with already known switches 
- Fixed: webgui update auto restart (caused by script changes)
- Implemented: Email Notifications
- Implemented: Email now via Curl library
- Implemented: Experimental Light Log graph
- Implemented: IP-Camera setup, and option to send email for light/switch/scene (email setup via application settings)
- Implemented: Email setup test button
- Changed: Notification text 'Greater then' changed to 'Greater Than'
- Implemented: 5th parameter for light/switch script (full status descriptor)
- Fixed: PushOn button Off delay time now handles values above 255
- Implemented: Push On switch type On/Off icon
- Changed: LightwaveRF inline relay, "Open inline relay" now seen as "On"
- Implemented: Razberry (Z-Wave) switch support
- Implemented: Email notifications now send in background
- Implemented: Light/Switch notification On/Off type