@@ -39,9 +39,6 @@ C1Wire::C1Wire(const int ID)
 	m_HwdID=ID;
 	m_stoprequested=false;
 	Init();
-#ifdef _DEBUG
-	GetOWFSSensorDetails();
-#endif
 }
 
 C1Wire::~C1Wire(void)
